button spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -889,7 +889,8 @@ div.search-container {
 }
 
 .search-button {
-  max-width:20%;
+  min-width:10%;
+  max-width: fit-content;
   padding: 10px 5px;
 }
 
